hphp/test/slow/traits/require_constraint_nonexistent_class.php.expectf

Fatal error: Class 'NonExistent' required by trait 'T1' cannot be loaded in %s on line 3
